# computervision

./: CMakeLists.BAK  CMakeLists.txt  Makefile  README.md  fasthomography.py  homography.py  homography2.py  main.py  paths.py  utils.py
analyses/: comp_distro.py  speedcurve.py
include/: CMakeLists.txt  dlib
lib/: CMakeLists.txt  test.cpp.bak  test.hpp.bak
python/: homography.py  homography2.py  tensordot.py
src/: CMakeLists.txt  comp_distribution.cpp  cudafuncs.cu  cudafuncs.hpp  head_pose_estimation_test.cpp.bak  homography.cpp  homography.hpp  main.cpp  main.hpp  paths.hpp  screenshots.cpp  speedtest.cpp  test.cpp  test.hpp
src/cuda-utils/: CMakeLists.txt  cudafuncs.cu  cudafuncs.hpp
